[FEAT] Imgui Structure Init

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,11 +16,12 @@ link_directories(${OpenCV_LIB_DIR})
 include_directories(${CMAKE_SOURCE_DIR}/include)
 include_directories(${CMAKE_SOURCE_DIR}/Vendor/glfw-3.4/include)
 include_directories(${CMAKE_SOURCE_DIR}/include/imgui)
+include_directories(${CMAKE_SOURCE_DIR}/include/rlImgui)
 
 file(GLOB SOURCES ${CMAKE_SOURCE_DIR}/src/*.cpp)
 file(GLOB IMGUI_SOURCES ${CMAKE_SOURCE_DIR}/src/imgui/*.cpp)
 
-add_executable(main main.cpp ${SOURCES} ${IMGUI_SOURCES} ${CMAKE_SOURCE_DIR}/include)
+add_executable(main main.cpp ${SOURCES} ${IMGUI_SOURCES})
 
 target_link_libraries(main ${OpenCV_LIBS} )
 # Link the raylib static library
